fix: tab bar overflow bug

--- a/src/renderer/src/index.css
+++ b/src/renderer/src/index.css
@@ -70,7 +70,7 @@
   }
 
   ::-webkit-scrollbar {
-    @apply w-2;
+    @apply h-1 w-2;
   }
 
   ::-webkit-scrollbar-track {
